Fixed top items headings
Issue where top item headings overlapped if the screen is not large enough. Fixed by staggering each heading.

--- a/src/components/home/Top.css
+++ b/src/components/home/Top.css
@@ -62,7 +62,19 @@
 }
 
 .rankings {
+    height: 3vw;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     margin: 0;
+    margin-top: -2vw;
+    padding: 0;
+}
+
+.top1 {
+    align-self: flex-start;
+}
+
+.top3 {
+    align-self: flex-end;
 }
